# Benchmarks

./: .gitignore  README.md  README_2023-01-16.md  init.sh  plow_c256_d30s.md  plow_c256_d30s.sh  plow_c512_d30s.md  plow_c512_d30s.sh
go-fasthttp/: go.mod  main.go
go-gin/: go.mod  go.sum  main.go
rust-actix/: Cargo.toml  threads.rs
rust-actix/src/: main.rs
rust-axum/: Cargo.toml
rust-axum/src/: main.rs
