[package]
name = "rust-actix"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.2", features = ["derive"] }
serde_json = "1"
